:sparkles: feat: Consome API Previsao e registra no Banco